--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/eslint": "^0.6.1",
     "@nuxt/fonts": "^0.10.2",
     "@vueuse/motion": "^2.2.6",
+    "iconify-icon": "^2.1.0",
     "nuxt": "^3.14.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
