--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@iconify/vue": "^4.1.2",
+    "@vueuse/motion": "^2.2.6",
     "vue": "^3.5.12"
   },
   "devDependencies": {
