--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@iconify/vue": "^4.1.2",
+    "@vueuse/components": "^11.2.0",
+    "@vueuse/core": "^11.2.0",
     "@vueuse/motion": "^2.2.6",
     "vue": "^3.5.12"
   },
