--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/fonts": "^0.10.2",
     "@nuxt/icon": "^1.8.2",
     "@nuxt/image": "^1.8.1",
+    "@unocss/reset": "^0.64.1",
     "nuxt": "^3.14.1592",
     "sharp": "^0.33.5",
     "vue": "^3.5.13",
