--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@nuxt/image": "^1.8.1",
     "@unocss/reset": "^0.64.1",
     "nuxt": "^3.14.1592",
-    "sharp": "^0.33.5",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@iconify-json/mingcute": "^1.2.1",
     "@unocss/nuxt": "^0.64.1",
+    "@vueuse/core": "^11.3.0",
+    "@vueuse/nuxt": "^11.3.0",
     "unocss": "^0.64.1"
   }
 }
