ci: replace pnpm setup with Docker build for Nuxt deployment workflow

--- a/.github/workflows/nuxt.yml
+++ b/.github/workflows/nuxt.yml
@@ -21,35 +21,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: "22"
-          cache: "pnpm"
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-        with:
-          static_site_generator: nuxt
-
-      - name: Restore cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            dist
-            .nuxt
-          key: ${{ runner.os }}-nuxt-build-${{ hashFiles('dist') }}
-          restore-keys: |
-            ${{ runner.os }}-nuxt-build-
-
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Static HTML export with Nuxt
-        run: pnpm generate
+      - name: Build using Docker
+        run: docker build -o dist .
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
