--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@iconify-json/iconamoon": "^1.2.1",
+    "@iconify-json/line-md": "^1.2.2",
     "@iconify-json/mingcute": "^1.2.1",
     "@unocss/nuxt": "^0.64.1",
     "@vueuse/core": "^11.3.0",
